packages/lodepng_flutter/src/lodepng.h


typedef enum LodePNGColorType {
  LCT_GREY = 0, 
  LCT_RGB = 2, 
  LCT_PALETTE = 3, 
  LCT_GREY_ALPHA = 4, 
  LCT_RGBA = 6, 
  LCT_MAX_OCTET_VALUE = 255
} LodePNGColorType;
unsigned decode(std::vector<unsigned char>& out, unsigned& w, unsigned& h,
                const unsigned char* in, size_t insize,
                LodePNGColorType colortype = LCT_RGBA, unsigned bitdepth = 8);
unsigned decode(std::vector<unsigned char>& out, unsigned& w, unsigned& h,
                const std::vector<unsigned char>& in,
                LodePNGColorType colortype = LCT_RGBA, unsigned bitdepth = 8);
unsigned decode(std::vector<unsigned char>& out, unsigned& w, unsigned& h,
                const std::string& filename,
                LodePNGColorType colortype = LCT_RGBA, unsigned bitdepth = 8);
unsigned encode(std::vector<unsigned char>& out,
                const unsigned char* in, unsigned w, unsigned h,
                LodePNGColorType colortype = LCT_RGBA, unsigned bitdepth = 8);
unsigned encode(std::vector<unsigned char>& out,
                const std::vector<unsigned char>& in, unsigned w, unsigned h,
                LodePNGColorType colortype = LCT_RGBA, unsigned bitdepth = 8);
unsigned encode(const std::string& filename,
                const unsigned char* in, unsigned w, unsigned h,
                LodePNGColorType colortype = LCT_RGBA, unsigned bitdepth = 8);
unsigned encode(const std::string& filename,
                const std::vector<unsigned char>& in, unsigned w, unsigned h,
                LodePNGColorType colortype = LCT_RGBA, unsigned bitdepth = 8);
typedef struct LodePNGDecompressSettings LodePNGDecompressSettings;
struct LodePNGDecompressSettings {
  unsigned ignore_adler32; 
  unsigned ignore_nlen; 
  size_t max_output_size;
  unsigned (*custom_zlib)(unsigned char**, size_t*,
                          const unsigned char*, size_t,
                          const LodePNGDecompressSettings*);
  unsigned (*custom_inflate)(unsigned char**, size_t*,
                             const unsigned char*, size_t,
                             const LodePNGDecompressSettings*);
  const void* custom_context; 
};
typedef struct LodePNGCompressSettings LodePNGCompressSettings;
struct LodePNGCompressSettings  {
  unsigned btype; 
  unsigned use_lz77; 
  unsigned windowsize; 
  unsigned minmatch; 
  unsigned nicematch; 
  unsigned lazymatching; 
  unsigned (*custom_zlib)(unsigned char**, size_t*,
                          const unsigned char*, size_t,
                          const LodePNGCompressSettings*);
  unsigned (*custom_deflate)(unsigned char**, size_t*,
                             const unsigned char*, size_t,
                             const LodePNGCompressSettings*);
  const void* custom_context; 
};
typedef struct LodePNGColorMode {
  LodePNGColorType colortype; 
  unsigned bitdepth;  
  unsigned char* palette; 
  size_t palettesize; 
  unsigned key_defined; 
  unsigned key_r;       
  unsigned key_g;       
  unsigned key_b;       
} LodePNGColorMode;
typedef struct LodePNGTime {
  unsigned year;    
  unsigned month;   
  unsigned day;     
  unsigned hour;    
  unsigned minute;  
  unsigned second;  
} LodePNGTime;
typedef struct LodePNGInfo {
  unsigned compression_method;
  unsigned filter_method;     
  unsigned interlace_method;  
  LodePNGColorMode color;     
#ifdef LODEPNG_COMPILE_ANCILLARY_CHUNKS
  unsigned background_defined; 
  unsigned background_r;       
  unsigned background_g;       
  unsigned background_b;       
  size_t text_num; 
  char** text_keys; 
  char** text_strings; 
  size_t itext_num; 
  char** itext_keys; 
  char** itext_langtags; 
  char** itext_transkeys; 
  char** itext_strings; 
  unsigned time_defined; 
  LodePNGTime time;
  unsigned phys_defined; 
  unsigned phys_x; 
  unsigned phys_y; 
  unsigned phys_unit; 
  unsigned gama_defined; 
  unsigned gama_gamma;   
  unsigned chrm_defined; 
  unsigned chrm_white_x; 
  unsigned chrm_white_y; 
  unsigned chrm_red_x;   
  unsigned chrm_red_y;   
  unsigned chrm_green_x; 
  unsigned chrm_green_y; 
  unsigned chrm_blue_x;  
  unsigned chrm_blue_y;  
  unsigned srgb_defined; 
  unsigned srgb_intent;  
  unsigned iccp_defined;      
  char* iccp_name;            
  unsigned char* iccp_profile;
  unsigned iccp_profile_size; 
  unsigned sbit_defined; 
  unsigned sbit_r;       
  unsigned sbit_g;       
  unsigned sbit_b;       
  unsigned sbit_a;       
  unsigned char* unknown_chunks_data[3];
  size_t unknown_chunks_size[3]; 
#endif 
} LodePNGInfo;
unsigned lodepng_deflate(unsigned char** out, size_t* outsize,
                         const unsigned char* in, size_t insize,
                         const LodePNGCompressSettings* settings);
unsigned lodepng_load_file(unsigned char** out, size_t* outsize, const char* filename);
unsigned lodepng_save_file(const unsigned char* buffer, size_t buffersize, const char* filename);
unsigned decode(std::vector<unsigned char>& out, unsigned& w, unsigned& h,
                State& state,
                const unsigned char* in, size_t insize);
unsigned decode(std::vector<unsigned char>& out, unsigned& w, unsigned& h,
                State& state,
                const std::vector<unsigned char>& in);
unsigned encode(std::vector<unsigned char>& out,
                const unsigned char* in, unsigned w, unsigned h,
                State& state);
unsigned encode(std::vector<unsigned char>& out,
                const std::vector<unsigned char>& in, unsigned w, unsigned h,
                State& state);
DLLEXPORT void freePtr(void* p);