packages/lodepng_flutter/lib/lodepng_flutter_bindings_generated.dart


  late final _lodepng_deflatePtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
              ffi.Pointer<ffi.Size>,
              ffi.Pointer<ffi.UnsignedChar>,
              ffi.Size,
              ffi.Pointer<LodePNGCompressSettings>)>>('lodepng_deflate');
  late final _lodepng_deflate = _lodepng_deflatePtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
          ffi.Pointer<ffi.Size>,
          ffi.Pointer<ffi.UnsignedChar>,
          int,
          ffi.Pointer<LodePNGCompressSettings>)>();

  /// Load a file from disk into buffer. The function allocates the out buffer, and
  /// after usage you should free it.
  /// out: output parameter, contains pointer to loaded buffer.
  /// outsize: output parameter, size of the allocated out buffer
  /// filename: the path to the file to load
  /// return value: error code (0 means ok)
  ///
  /// NOTE: Wide-character filenames are not supported, you can use an external method
  /// to handle such files and decode in-memory.
  int lodepng_load_file(
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out,
    ffi.Pointer<ffi.Size> outsize,
    ffi.Pointer<ffi.Char> filename,
  ) {
    return _lodepng_load_file(
      out,
      outsize,
      filename,
    );
  }

  late final _lodepng_load_filePtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
              ffi.Pointer<ffi.Size>,
              ffi.Pointer<ffi.Char>)>>('lodepng_load_file');
  late final _lodepng_load_file = _lodepng_load_filePtr.asFunction<
      int Function(ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
          ffi.Pointer<ffi.Size>, ffi.Pointer<ffi.Char>)>();

  /// Save a file from buffer to disk. Warning, if it exists, this function overwrites
  /// the file without warning!
  /// buffer: the buffer to write
  /// buffersize: size of the buffer to write
  /// filename: the path to the file to save to
  /// return value: error code (0 means ok)
  ///
  /// NOTE: Wide-character filenames are not supported, you can use an external method
  /// to handle such files and encode in-memory
  int lodepng_save_file(
    ffi.Pointer<ffi.UnsignedChar> buffer,
    int buffersize,
    ffi.Pointer<ffi.Char> filename,
  ) {
    return _lodepng_save_file(
      buffer,
      buffersize,
      filename,
    );
  }

  late final _lodepng_save_filePtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<ffi.UnsignedChar>, ffi.Size,
              ffi.Pointer<ffi.Char>)>>('lodepng_save_file');
  late final _lodepng_save_file = _lodepng_save_filePtr.asFunction<
      int Function(
          ffi.Pointer<ffi.UnsignedChar>, int, ffi.Pointer<ffi.Char>)>();

  void freePtr(
    ffi.Pointer<ffi.Void> p,
  ) {
    return _freePtr(
      p,
    );
  }

  late final _freePtrPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'freePtr');
  late final _freePtr =
      _freePtrPtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();
}

/// The PNG color types (also used for raw image).
abstract class LodePNGColorType {
  /// grayscale: 1,2,4,8,16 bit
  static const int LCT_GREY = 0;

  /// RGB: 8,16 bit
  static const int LCT_RGB = 2;

  /// palette: 1,2,4,8 bit
  static const int LCT_PALETTE = 3;

  /// grayscale with alpha: 8,16 bit
  static const int LCT_GREY_ALPHA = 4;

  /// RGB with alpha: 8,16 bit
  static const int LCT_RGBA = 6;

  /// LCT_MAX_OCTET_VALUE lets the compiler allow this enum to represent any invalid
  /// byte value from 0 to 255 that could be present in an invalid PNG file header. Do
  /// not use, compare with or set the name LCT_MAX_OCTET_VALUE, instead either use
  /// the valid color type names above, or numeric values like 1 or 7 when checking for
  /// particular disallowed color type byte values, or cast to integer to print it.
  static const int LCT_MAX_OCTET_VALUE = 255;
}

final class LodePNGDecompressSettings extends ffi.Struct {
  /// if 1, continue and don't give an error message if the Adler32 checksum is corrupted
  @ffi.UnsignedInt()
  external int ignore_adler32;

  /// ignore complement of len checksum in uncompressed blocks
  @ffi.UnsignedInt()
  external int ignore_nlen;

  /// Maximum decompressed size, beyond this the decoder may (and is encouraged to) stop decoding,
  /// return an error, output a data size > max_output_size and all the data up to that point. This is
  /// not hard limit nor a guarantee, but can prevent excessive memory usage. This setting is
  /// ignored by the PNG decoder, but is used by the deflate/zlib decoder and can be used by custom ones.
  /// Set to 0 to impose no limit (the default).
  @ffi.Size()
  external int max_output_size;

  /// use custom zlib decoder instead of built in one (default: null).
  /// Should return 0 if success, any non-0 if error (numeric value not exposed).
  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
              ffi.Pointer<ffi.Size>,
              ffi.Pointer<ffi.UnsignedChar>,
              ffi.Size,
              ffi.Pointer<LodePNGDecompressSettings>)>> custom_zlib;

  /// use custom deflate decoder instead of built in one (default: null)
  /// if custom_zlib is not null, custom_inflate is ignored (the zlib format uses deflate).
  /// Should return 0 if success, any non-0 if error (numeric value not exposed).
  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
              ffi.Pointer<ffi.Size>,
              ffi.Pointer<ffi.UnsignedChar>,
              ffi.Size,
              ffi.Pointer<LodePNGDecompressSettings>)>> custom_inflate;

  /// optional custom settings for custom functions
  external ffi.Pointer<ffi.Void> custom_context;
}

final class LodePNGCompressSettings extends ffi.Struct {
  /// the block type for LZ (0, 1, 2 or 3, see zlib standard). Should be 2 for proper compression.
  @ffi.UnsignedInt()
  external int btype;

  /// whether or not to use LZ77. Should be 1 for proper compression.
  @ffi.UnsignedInt()
  external int use_lz77;

  /// must be a power of two <= 32768. higher compresses more but is slower. Default value: 2048.
  @ffi.UnsignedInt()
  external int windowsize;

  /// minimum lz77 length. 3 is normally best, 6 can be better for some PNGs. Default: 0
  @ffi.UnsignedInt()
  external int minmatch;

  /// stop searching if >= this length found. Set to 258 for best compression. Default: 128
  @ffi.UnsignedInt()
  external int nicematch;

  /// use lazy matching: better compression but a bit slower. Default: true
  @ffi.UnsignedInt()
  external int lazymatching;

  /// use custom zlib encoder instead of built in one (default: null)
  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
              ffi.Pointer<ffi.Size>,
              ffi.Pointer<ffi.UnsignedChar>,
              ffi.Size,
              ffi.Pointer<LodePNGCompressSettings>)>> custom_zlib;

  /// use custom deflate encoder instead of built in one (default: null)
  /// if custom_zlib is used, custom_deflate is ignored since only the built in
  /// zlib function will call custom_deflate
  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
              ffi.Pointer<ffi.Size>,
              ffi.Pointer<ffi.UnsignedChar>,
              ffi.Size,
              ffi.Pointer<LodePNGCompressSettings>)>> custom_deflate;

  /// optional custom settings for custom functions
  external ffi.Pointer<ffi.Void> custom_context;
}

/// Color mode of an image. Contains all information required to decode the pixel
/// bits to RGBA colors. This information is the same as used in the PNG file
/// format, and is used both for PNG and raw image data in LodePNG.
final class LodePNGColorMode extends ffi.Struct {
  /// color type, see PNG standard or documentation further in this header file
  @ffi.Int32()
  external int colortype;

  /// bits per sample, see PNG standard or documentation further in this header file
  @ffi.UnsignedInt()
  external int bitdepth;

  /// palette in RGBARGBA... order. Must be either 0, or when allocated must have 1024 bytes
  external ffi.Pointer<ffi.UnsignedChar> palette;

  /// palette size in number of colors (amount of used bytes is 4 * palettesize)
  @ffi.Size()
  external int palettesize;

  /// is a transparent color key given? 0 = false, 1 = true
  @ffi.UnsignedInt()
  external int key_defined;

  /// red/grayscale component of color key
  @ffi.UnsignedInt()
  external int key_r;

  /// green component of color key
  @ffi.UnsignedInt()
  external int key_g;

  /// blue component of color key
  @ffi.UnsignedInt()
  external int key_b;
}

/// The information of a Time chunk in PNG.
final class LodePNGTime extends ffi.Struct {
  /// 2 bytes used (0-65535)
  @ffi.UnsignedInt()
  external int year;

  /// 1-12
  @ffi.UnsignedInt()
  external int month;

  /// 1-31
  @ffi.UnsignedInt()
  external int day;

  /// 0-23
  @ffi.UnsignedInt()
  external int hour;

  /// 0-59
  @ffi.UnsignedInt()
  external int minute;

  /// 0-60 (to allow for leap seconds)
  @ffi.UnsignedInt()
  external int second;
}

/// Information about the PNG image, except pixels, width and height.
final class LodePNGInfo extends ffi.Struct {
  /// compression method of the original file. Always 0.
  @ffi.UnsignedInt()
  external int compression_method;

  /// filter method of the original file
  @ffi.UnsignedInt()
  external int filter_method;

  /// interlace method of the original file: 0=none, 1=Adam7
  @ffi.UnsignedInt()
  external int interlace_method;

  /// color type and bits, palette and transparency of the PNG file
  external LodePNGColorMode color;

  /// is a suggested background color given?
  @ffi.UnsignedInt()
  external int background_defined;

  /// red/gray/palette component of suggested background color
  @ffi.UnsignedInt()
  external int background_r;

  /// green component of suggested background color
  @ffi.UnsignedInt()
  external int background_g;

  /// blue component of suggested background color
  @ffi.UnsignedInt()
  external int background_b;

  /// the amount of texts in these char** buffers (there may be more texts in itext)
  @ffi.Size()
  external int text_num;

  /// the keyword of a text chunk (e.g. "Comment")
  external ffi.Pointer<ffi.Pointer<ffi.Char>> text_keys;

  /// the actual text
  external ffi.Pointer<ffi.Pointer<ffi.Char>> text_strings;

  /// the amount of international texts in this PNG
  @ffi.Size()
  external int itext_num;

  /// the English keyword of the text chunk (e.g. "Comment")
  external ffi.Pointer<ffi.Pointer<ffi.Char>> itext_keys;

  /// language tag for this text's language, ISO/IEC 646 string, e.g. ISO 639 language tag
  external ffi.Pointer<ffi.Pointer<ffi.Char>> itext_langtags;

  /// keyword translated to the international language - UTF-8 string
  external ffi.Pointer<ffi.Pointer<ffi.Char>> itext_transkeys;

  /// the actual international text - UTF-8 string
  external ffi.Pointer<ffi.Pointer<ffi.Char>> itext_strings;

  /// set to 1 to make the encoder generate a tIME chunk
  @ffi.UnsignedInt()
  external int time_defined;

  external LodePNGTime time;

  /// if 0, there is no pHYs chunk and the values below are undefined, if 1 else there is one
  @ffi.UnsignedInt()
  external int phys_defined;

  /// pixels per unit in x direction
  @ffi.UnsignedInt()
  external int phys_x;

  /// pixels per unit in y direction
  @ffi.UnsignedInt()
  external int phys_y;

  /// may be 0 (unknown unit) or 1 (metre)
  @ffi.UnsignedInt()
  external int phys_unit;
